@@ -1,3 +1,11 @@
+2004-05-27  Ronald Bultje  <rbultje@ronald.bitfreak.net>
+
+	* ext/alsa/gstalsamixer.c: (gst_alsa_mixer_build_list):
+	  Select first track as master track. Not sure how else to handle
+	  that...
+	* ext/ogg/gstoggmux.c: (gst_ogg_mux_next_buffer):
+	  Discard discont events. Should fix #142962.
+
 2004-05-26  Ronald Bultje  <rbultje@ronald.bitfreak.net>
 
 	* ext/alsa/Makefile.am:
